syntax = "proto3";

package pxgrider_proto;

import "google/protobuf/timestamp.proto";
import "proto/user.proto";

option go_package = "github.com/vkumov/go-pxgrider/pxgrider_proto";

message ConnectionMessage {
  int64 id = 1;
  string client = 2;
  string topic = 3;
  string message = 4;
  google.protobuf.Timestamp timestamp = 5;
  bool viewed = 6;
}

message GetConnectionMessagesRequest {
  User user = 1;
  string connection_id = 2;
  int64 limit = 3;
  int64 offset = 4;
}

message GetConnectionMessagesResponse {
  repeated ConnectionMessage messages = 1;
  int64 total = 2;
  int64 limit = 3;
  int64 offset = 4;
}

message MarkConnectionMessagesAsReadRequest {
  User user = 1;
  string connection_id = 2;
  repeated int64 message_ids = 3;
}

message MarkConnectionMessagesAsReadResponse {}

message MessageIDs { repeated int64 ids = 1; }

message DeleteConnectionMessagesRequest {
  User user = 1;
  string connection_id = 2;
  oneof what {
    MessageIDs message_ids = 3;
    bool all = 4;
  }
}

message DeleteConnectionMessagesResponse { int64 deleted = 1; }
